Clay Strips brush Collapsed geometry #71868

Closed
opened 2019-11-24 20:08:47 +01:00 by So3Datel · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-23 16:21, hash: 44f18ce0a6
Worked: (optional)

Short description of error
With Dyntopo. If you activate change the size of the brush with pen pressure, and use the Clay Strips brush, then the beginning and end of thestroke will be collapsed.

Exact steps for others to reproduce the error
Activate Dyntopo
Activate Size Pressure (Enable tablet pressure sensitivity for size)
Took Clay Strips brush and sculpt.

The same thing if you use a mouse after pen, but the effect is much stronger.

screen.jpg

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-23 16:21, hash: `44f18ce0a6` Worked: (optional) **Short description of error** With Dyntopo. If you activate change the size of the brush with pen pressure, and use the Clay Strips brush, then the beginning and end of thestroke will be collapsed. **Exact steps for others to reproduce the error** Activate Dyntopo Activate Size Pressure (Enable tablet pressure sensitivity for size) Took Clay Strips brush and sculpt. The same thing if you use a mouse after pen, but the effect is much stronger. ![screen.jpg](https://archive.blender.org/developer/F8162576/screen.jpg)
Author

Added subscriber: @AxelMening-4

Added subscriber: @AxelMening-4

This issue was referenced by e85ab2cdc2

This issue was referenced by e85ab2cdc2a6905f4d2eb4a2acdc6db8e20fbeec

Added subscriber: @BartekMoniewski

Added subscriber: @BartekMoniewski
Pablo Dobarro was assigned by Bartosz Moniewski 2019-11-24 21:32:37 +01:00

I can confirm this. For me it only occurs while using tablet, applying stroke with very small pressure.

dyntopo_pressure_bug.mp4

I can confirm this. For me it only occurs while using tablet, applying stroke with very small pressure. [dyntopo_pressure_bug.mp4](https://archive.blender.org/developer/F8163075/dyntopo_pressure_bug.mp4)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Please dont add these to milestones yourself, this is something module owners will do...

Please dont add these to milestones yourself, this is something module owners will do...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71868
No description provided.