source/blender/editors/sculpt_paint/sculpt_intern.h
@@ -318,6 +318,10 @@ typedef struct StrokeCache {
   float true_last_location[3];
   float location[3];
   float last_location[3];
+
+  /* This radius variable is not affected by pressure curves */
+  float dyntopo_radius;
+
   bool is_last_valid;
 
   bool pen_flip;
